# bitcoinstart

./: Cargo.toml  README.md
src/: main.rs
src/options/: genaddress.rs  genpub.rs  genwords.rs
